
    HIVE-693. Add a AWS S3 log format deserializer
    (Zheng Shao and Andraz Tori via namit)

    HIVE-699. Functions with variable length arguments
    (Zheng Shao via namit)

  IMPROVEMENTS

    HIVE-760. Add version info to META-INF/MANIFEST.MF.
    (Bill Graham via zshao)

    HIVE-759. Add "hive.intermediate.compression.codec/type" option.
    (Yongqiang He via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-734. problem while inserting nulls. (Ning Zhang via namit)

    HIVE-764. Fixed json.jar. (Raghu Murthy via zshao)

    HIVE-769. Bug in partition pruner checking. (Zheng Shao via namit)
    
    HIVE-773. Remove lzocodec import from FileSinkOperator.
    (He Yongqiang via johan)

Release 0.4.0 -  Unreleased

  INCOMPATIBLE CHANGES

    HIVE-143. Remove the old file based metastore, in favour of the
    RDBMS based metastore. (prasadc via johan)

    HIVE-724. Change HiveServer.getSchema() to return Hive types rather
    than Thrift types. Changed existing getSchema() to getThriftSchema()
    (Eric Hwang via rmurthy)

  NEW FEATURES

    HIVE-354. UDF for length of a string. (Neil Conway via namit).

    HIVE-402. Implement UDF regexp. (Raghotham Murthy via namit)

    HIVE-250. Shared memory java dbm for map-side joins.
    (Joydeep Sen Sarma via zshao)

    HIVE-164. Use CASE through GenericUDF (Zheng Shao via namit)

    HIVE-464. Add alter partition method to the meastore interface.
    (Prasad Chakka via zshao)

    HIVE-352. Column-based storage format RCFile.
    (Yongqiang He via zshao)

    HIVE-420. Support regular expressions for column names
    (Zheng Shao via namit)

    HIVE-463. Add a pre execution hook to ql
    (Ashish Thusoo via prasadc)

    HIVE-476. Add getTable and getPartition calls to the ReadEntity and
     WriteEntity objects in PreExecute hooks. (Ashish Thusoo via prasadc)

    HIVE-518. Add test mode to hive where input tables are sampled.
    (Namit Jain via rmurthy)

    HIVE-509. Add create table like.